--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -148,6 +148,7 @@
     "react-router-scroll": "0.4.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "3.6.0",
+    "redux-auth-wrapper": "^1.0.0",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.14.0",
     "reselect": "2.5.4",
