--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,13 +4,68 @@
   "description": "The backend side for Learning Badges project",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.15.2",
-    "mongoose": "^4.9.5"
+    "bcryptjs": "^2.4.0",
+    "body-parser": "^1.16.0",
+    "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
+    "express-validation": "^1.0.1",
+    "express-winston": "^2.1.2",
+    "helmet": "^3.4.0",
+    "http-status": "^0.2.5",
+    "jwt-simple": "^0.5.1",
+    "lodash": "^4.17.4",
+    "method-override": "^2.3.7",
+    "moment": "^2.0.0",
+    "mongodb": "^2.2.24",
+    "mongoose": "^4.8.1",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "whatwg-fetch": "^2.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "apidoc": "^0.17.3",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "debug": "^2.6.0",
+    "del": "^2.2.2",
+    "eslint": "^3.13.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sourcemaps": "^2.4.0",
+    "gulp-util": "^3.0.8",
+    "lint-staged": "^3.2.7",
+    "nodemon": "^1.11.0",
+    "pre-commit": "^1.2.2",
+    "run-sequence": "^1.2.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/index.js",
+    "start:dev": "gulp serve",
+    "lint": "npm run lint:js",
+    "lint:eslint": "eslint",
+    "lint:js": "npm run lint:eslint -- . ",
+    "lint-staged": "lint-staged",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "populate:db": "node populate.js"
   },
   "author": "SuEric",
-  "license": "ISC"
+  "license": "ISC",
+  "lint-staged": {
+    "*.js": "eslint"
+  },
+  "pre-commit": "lint-staged"
 }
