--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-boilerplate",
+  "name": "learning-badges-frontend",
   "version": "3.4.0",
   "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
   "repository": {
     "type": "git",
-    "url": "git://github.com/react-boilerplate/react-boilerplate.git"
+    "url": "git://github.com/SuEric/LearningBadges.git"
   },
   "engines": {
     "npm": ">=3",
